    consideration.
* Fixed parsing alias name in 'weather' plugin settings.
* Got rid of all individual plugins/*/Makefile - those rules more easily
    can be contained in the plugins/Makefile.am. Adding a simple plugin
    basically would mean to add three lines into that file instead of
    writing whole Makefile.am.
* Fixed invalid system config path search ("lxpanel" part was missing).

0.7.0
-------------------------------------------------------------------------
* New plugin 'launchtaskbar' with combined functionality from 'launchbar'
    and 'taskbar'. For easy support codebase is merged instead of doing
    duplicates but appearance is still the same in dependency from mode
    chosen.
* Integrated with LibFM, all launching and application selection in the
    launchbar settings is done by LibFM now.
* New simpler plugins API implementation, using LibFM plugins loader. In
    new API some callbacks were simplified and some removed, see all the
    detailed descriptions in the file plugin.h.
* New plugins are GtkWidgets now, therefore there is no explicit destroy
    for them or their data, all will be handled implicitly.
* Changed config access with simple API similar to libconfig one.
* Using icon caching from LibFM.
* Applications properties in the menu are managed by LibFM API, no more
    calls to lxshortcut application.
* Setting for file manager is not handled on its own but XDG setting is
    used now, i.e. default choice for "inode/directory" MIME type.
* Setting for terminal is handled by LibFM, therefore it is the same as
    in PCManFM now, no own setting anymore.
* Replaced configure option --enable-cast-checks with --enable-debug.
* Replaced 'pager' plugin with former 'wnckpager' one. The 'wnckpager'
    name is still supported for compatibility but it is the same plugin.
* Added new plugin 'weather', written by Piotr Sipika.
* Using drag & drop handling from LibFM in launchbar. It is possible now